<resources>
    <string name="app_name">U点管家</string>
    <string name="hint_phone">输入想要查询的手机号</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="wifi">wifi</string>
    <string name="login_password">账号密码登录</string>
    <string name="plaess_login">请输入账号</string>
    <string name="plaess_password">请输入密码</string>
    <string name="login_agreement">点击登录按钮代表您已同意用户协议和隐私政策</string>
    <string name="phone_address">查询号码属地</string>
    <string name="multiple">综合演示</string>
    <string name="home_furnishing">家居</string>
    <string name="home_my">我的</string>
    <string name="home_main_page">首页</string>
    <string name="home_scene">场景</string>
    <string name="home_shopping">商城</string>
    <string name="home_page_add_device">添加设备</string>
    <string name="add_device_zxing">扫描添加</string>
    <string name="add_device_version">设备型号</string>
    <string name="add_device_list">设备列表</string>
    <string name="my_device">我的设备</string>
    <string name="add_device_zxing_photo">从相册添加</string>
    <string name="add_device_zxing_jieshao1">将条码放入框内，即可自动扫描</string>
    <string name="add_device_zxing_jieshao2">将二维码/条码放入框内，即可自动扫描</string>
    <string name="home_scene_edit">编辑</string>
    <string name="home_scene_sleep_pattern">睡眠模式</string>
    <string name="home_scene_getup_pattern">起床模式</string>
    <string name="home_scene_gethome_pattern">回家模式</string>
    <string name="home_scene_awayhome_pattern">离家模式</string>
    <string name="home_scene_manual">默认场景</string>
    <string name="home_scene_setting">模式设置</string>
    <string name="home_scene_automatic">自定义场景</string>
    <string name="home_scene_no_device">暂无设备</string>
    <string name="home_scene_shoudong_device">手动执行</string>
    <string name="home_login">登录</string>
    <string name="home_login_name">账号</string>
    <string name="home_login_password">密码</string>
    <string name="home_login_no_password">忘记密码</string>
    <string name="home_login_verification_code">验证码登录</string>
    <string name="home_login_name_password">账户密码登录</string>
    <string name="home_verification_code">验证码</string>
    <string name="home_get_verification_code">获取验证码</string>
    <string name="home_verification_code_time">%1$d S</string>
    <string name="home_please_verification_code">请输入短信验证码</string>
    <string name="home_phone">手机号</string>
    <string name="home_phone_please">请输入手机号</string>
    <string name="home_phone_86">+ 86</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_delete">删除</string>
    <string name="btn_untie">解绑</string>
    <string name="btn_save">保存</string>
    <string name="home_find_password">找回密码</string>
    <string name="home_modify_password">修改密码</string>
    <string name="home_modify_password_ok">再次确认</string>
    <string name="home_modify_password_no">暂不设置</string>
    <string name="home_message_setting">消息设置</string>
    <string name="home_message">消息</string>
    <string name="home_message_shore">短信</string>
    <string name="home_monitoring_setting_threshold">监控设备的监控值达到设置阈值</string>
    <string name="home_device_fault">设备出现故障</string>
    <string name="home_telphone">电话</string>
    <string name="home_device_message">设备消息</string>
    <string name="home_system_message">系统消息</string>
    <string name="home_message_setting_applogin_name">家庭用户登录时发送登录通知</string>
    <string name="home_drawer_state">主账号</string>
    <string name="home_message_voice">消息通知声音</string>
    <string name="home_message_shock">消息通知震动</string>
    <string name="home_drawer_download">远程下载</string>
    <string name="home_drawer_not_ordered">未订购</string>
    <string name="home_drawer_not_starting">未启动</string>
    <string name="home_drawer_starting">启动中</string>
    <string name="home_drawer_my_application">应用加速</string>
    <string name="home_drawer_my_network">网络加速</string>
    <string name="home_drawer_my_shopping">购物爱好</string>
    <string name="home_drawer_my_cloud_storage">家庭云储存</string>
    <string name="home_drawer_my_plug">我的插件</string>
    <string name="home_drawer_exit_app">退出登录</string>
    <string name="home_login_null">密码或账号不能为空</string>
    <string name="home_login_password_null">密码不能为空</string>
    <string name="home_login_password_length">密码长度为6~18位</string>
    <string name="home_login_password_atypism">两次密码不一致</string>
    <string name="home_login_phone_yanzhen_null">手机号或验证码不能为空</string>
    <string name="home_login_phone_null">手机号不能为空</string>
    <string name="home_login_phone_pattern">请输入正确的手机号</string>
    <string name="home_not_network">网络无法连接</string>
    <string name="home_postion_loading">定位中...</string>
    <string name="home_room_temperature">室外温度</string>
    <string name="home_room_pm">pm2.5</string>
    <string name="home_room_cpu_setting">CPU使用</string>
    <string name="home_room_cpu_memory">内存使用</string>
    <string name="home_room_cpu_memory_details">查看详情>></string>
    <string name="home_room_cpu_memory_title">网关运行情况</string>
    <string name="home_cpu_memory_title">CPU内存占用</string>
    <string name="home_cpu_use">CPU占用:%1$s%%</string>
    <string name="home_memory_use">内存占用:%1$s%%</string>
    <string name="home_login_title">账号:</string>
    <string name="home_setting_device">已设置%1$s%%台设备</string>
    <string name="home_my_gateway_administration">网关基础信息管理</string>
    <string name="home_my_order">我的订单</string>
    <string name="home_my_message">消息提醒</string>
    <string name="home_my_manual">用户手册</string>
    <string name="home_my_feedback">问题反馈</string>
    <string name="home_my_gateway">我的网关</string>
    <string name="home_my_update">检查更新</string>
    <string name="home_download_file_task">下载任务</string>
    <string name="home_download_file_management">文件管理</string>
    <string name="home_my_feedback_type">问题类型</string>
    <string name="home_my_feedback_max_length">%1$s%%/200</string>
    <string name="home_login_register">注册</string>
    <string name="home_login_real_name">真实姓名</string>
    <string name="home_login_phone">手机号码</string>
    <string name="home_baidu_location">访问CellID或WiFi获得位置信息</string>
    <string name="home_baidu_file_location">获取当前服务区代码</string>
    <string name="home_baidu_sdcard">获取sd卡获得写的权限</string>
    <string name="home_baidu_phoone_state">获取手机读写码权限</string>
    <string name="home_baidu_canmer_state">获取相机权限</string>
    <string name="home_user_list">用户列表</string>
    <string name="home_user_name">用户</string>
    <string name="home_user_number">用户数量</string>
    <string name="home_file_number">文件数量</string>
    <string name="home_plugin_name">插件</string>
    <string name="home_individual">%1$d个</string>
    <string name="home_plugin_uninstall">卸载</string>
    <string name="home_plugin_install">安装</string>
    <string name="home_plugin_update">更新</string>
    <string name="home_plugin_upgrade_yes">可升级</string>
    <string name="home_plugin_upgrade_version">版本号:</string>
    <string name="home_plugin_install_title">安装插件</string>
    <string name="home_my_gateway_device">网关设备</string>
    <string name="home_my_room">房间管理</string>
    <string name="home_gateway_name">网关</string>
    <string name="home_my_networking_device">组网设备</string>
    <string name="home_my_home_device">家居设备</string>
    <string name="home_my_plugin_device">插件列表</string>
    <string name="home_my_many_device">更多设备>></string>
    <string name="home_my_more_device">下挂设备</string>
    <string name="home_my_pull_black_device">拉黑列表</string>
    <string name="home_my_black">黑名单</string>
    <string name="home_add_black">加入黑名单</string>
    <string name="home_add_gateway_bind">绑定网关</string>
    <string name="home_add_gateway_zxing_jieshao">请扫描网关底部或正面的二维码</string>
    <string name="home_add_gateway_zxing">扫一扫链接</string>
    <string name="home_add_gateway_next">下一步</string>
    <string name="home_add_gateway_1_3">1/3</string>
    <string name="home_add_gateway_2_3">2/3</string>
    <string name="home_add_gateway_3_3">3/3</string>
    <string name="home_add_gateway_two_title">选择设备加入的WI-FI网络</string>
    <string name="home_add_gateway_three_title">搜索匹配的设备</string>
    <string name="home_add_gateway_ok_title">绑定成功</string>
    <string name="home_add_gateway_ok_room">所属房间</string>
    <string name="home_living_room">客厅</string>
    <string name="home__kitchen">厨房</string>
    <string name="home_replace">更换</string>
    <string name="home_air_quality">空气质量:</string>
    <string name="home_gateway_detail_title">网关详情</string>
    <string name="home_gateway_detail_title_nomal">链接正常</string>
    <string name="home_gateway_detail_title_colse">断开</string>
    <string name="home_gateway_detail_room">客厅>></string>
    <string name="home_gateway_detail_guanlian_device">关联设备</string>
    <string name="home_gateway_detail_restart">重启</string>
    <string name="home_gateway_detail_restart_ok">重启成功</string>
    <string name="home_gateway_detail_untie_ok">解绑成功</string>
    <string name="home_gateway_detail_name_info">网关管理</string>
    <string name="home_gateway_detail_name_info_neme">设备名称</string>
    <string name="home_gateway_detail_name_info_base">网关基础信息</string>
    <string name="home_gateway_detail_name_info_wifi">网关WiFi设置</string>
    <string name="home_gateway_detail_name_info_adsl">已绑定宽带账号</string>
    <string name="home_network_detail_title">组网管理</string>
    <string name="home_network_detail_wifi_name">Wi-Fi名称</string>
    <string name="home_network_detail_wifi_info">组网WiFi</string>
    <string name="home_network_detail_name">组网名称</string>
    <string name="home_network_detail_manufactor">生产厂家</string>
    <string name="home_network_detail_device">设备型号</string>
    <string name="home_network_detail_mac">MAC地址</string>
    <string name="home_network_detail_sn">S/N</string>
    <string name="home_network_detail_name_null_no">名称不能为空</string>
    <string name="home_url_null_no">不能为空</string>
    <string name="home_network_detail_state">运行状态</string>
    <string name="home_network_detail_base_name">组网设备基础信息</string>
    <string name="home_network_detail_setting_name">组网WiFi设置管理</string>
    <string name="home_network_detail_zhanghao_name">宽带账号</string>
    <string name="home_all_read">全部已读</string>
    <string name="home_all_delect">全部删除</string>
    <string name="home_add_network_bind">绑定组网</string>
    <string name="home_remote_downing">正在下载</string>
    <string name="home_remote_ok">已完成</string>
    <string name="home_remote_delete">已删除</string>
    <string name="home_remote_down">远程下载</string>
    <string name="home_remote_new_download">新建下载</string>
    <string name="home_remote_new_download_dialog">新建下载任务</string>
    <string name="home_remote_new_download_dialog_tile">填写要下载的文件列表</string>
    <string name="home_remote_save_dir">保存路径</string>
    <string name="home_remote_save_btn">选定</string>
    <string name="home_remote_def_path">选择路径></string>
    <string name="home_remote_built_task_ok">创建远程下载成功</string>
    <string name="home_exits">再按一次后退键退出程序</string>
    <string name="home_cloud_title">智能云存储</string>
    <string name="home_cloud">云存储</string>
    <string name="home_cloud_chuanshu">传输列表</string>
    <string name="home_cloud_hit_search">搜索</string>
    <string name="home_cloud_space">存储空间</string>
    <string name="home_cloud_use_old">已绑定用户</string>
    <string name="home_cloud_all_files">全部文件</string>
    <string name="home_cloud_photo_files">照片</string>
    <string name="home_cloud_doc_files">文档</string>
    <string name="home_cloud_music_files">音乐</string>
    <string name="home_cloud_video_files">视频</string>
    <string name="home_cloud_zip_files">压缩包</string>
    <string name="home_cloud_downing">正在下载(%1$d)</string>
    <string name="home_cloud_download_ok">下载完成(%1$d)</string>
    <string name="home_cloud_upload_ok">上传完成(%1$d)</string>
    <string name="home_cloud_upload_starting">正在上传(%1$d)</string>
    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
</resources>