<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/back_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_16dp"
        android:text="@string/home_modify_password"
        android:textColor="@color/home_black"
        android:textSize="@dimen/dime_28sp" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/home_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_16dp"
        android:layout_marginRight="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_16dp"
        android:background="@color/transparent"
        android:digits="@string/register_name_digits"
        android:padding="@dimen/dime_12dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/home_grgray_1"
        android:textColorHint="@color/home_line_1"
        android:textSize="@dimen/dime_16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_0_5dp"
        android:layout_marginBottom="@dimen/dime_5dp"
        android:layout_marginLeft="@dimen/dime_16dp"
        android:layout_marginRight="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_1dp"
        android:background="@color/home_grgray_1" />


    <EditText
        android:id="@+id/et_next_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_16dp"
        android:layout_marginRight="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_16dp"
        android:background="@color/transparent"
        android:hint="@string/home_modify_password_ok"
        android:padding="@dimen/dime_12dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:digits="@string/register_name_digits"
        android:textColor="@color/home_grgray_1"
        android:textColorHint="@color/home_line_1"
        android:textSize="@dimen/dime_16sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime_0_5dp"
        android:layout_marginBottom="@dimen/dime_5dp"
        android:layout_marginLeft="@dimen/dime_16dp"
        android:layout_marginRight="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_1dp"
        android:background="@color/home_grgray_1" />
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/dime_140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dime_16dp"
        android:layout_marginRight="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_32dp"
        android:background="@drawable/btn_shape"
        android:padding="@dimen/dime_8dp"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/dime_16sp" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginRight="@dimen/dime_16dp"
        android:padding="@dimen/dime_8dp"
        android:text="@string/home_modify_password_no"
        android:textColor="@color/home_grgray_2"
        android:textSize="@dimen/dime_13sp"
        android:visibility="gone" />

</LinearLayout>
