<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_main"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dime_8dp"
        android:paddingTop="@dimen/dime_8dp"
        android:text="@string/home_remote_new_download_dialog"
        android:textColor="@color/white"
        android:textSize="@dimen/dime_20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_32dp"
        android:layout_marginTop="@dimen/dime_32dp"
        android:text="@string/home_remote_new_download_dialog_tile"
        android:textColor="@color/home_grgray_1"
        android:textSize="@dimen/dime_16sp" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dime_16dp"
        android:layout_marginRight="@dimen/dime_16dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog"
        android:padding="@dimen/dime_12dp"
        android:singleLine="true"
        android:textColor="@color/home_grgray_1"
        android:textSize="@dimen/dime_16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dime_1dp"
        android:layout_marginStart="@dimen/dime_32dp"
        android:layout_marginEnd="@dimen/dime_32dp"
        android:layout_height="@dimen/dime_0_5dp"
        android:background="@color/home_grgray_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btm_cannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dime_16dp"
            android:layout_marginTop="@dimen/dime_16dp"
            android:background="@drawable/download_shape"
            android:gravity="center"
            android:padding="@dimen/dime_12dp"
            android:paddingBottom="@dimen/dime_12dp"
            android:paddingEnd="@dimen/dime_32dp"
            android:paddingStart="@dimen/dime_32dp"
            android:paddingTop="@dimen/dime_12dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/home_grgray_1"
            android:textSize="@dimen/dime_16sp" />

        <TextView
            android:id="@+id/btm_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dime_16dp"
            android:layout_marginStart="@dimen/dime_32dp"
            android:layout_marginTop="@dimen/dime_16dp"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:paddingBottom="@dimen/dime_12dp"
            android:paddingEnd="@dimen/dime_32dp"
            android:paddingStart="@dimen/dime_32dp"
            android:paddingTop="@dimen/dime_12dp"
            android:text="@string/btn_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/dime_16sp" />
    </LinearLayout>
</LinearLayout>